--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
     <!-- endbuild -->
   </head>
   <body>
+  <p> 
+  Difference between FEC filings on Feb 17 2014 and March 22 2015.
 
+  Of the 2,142,194 records collected in March 2015 we were able to find 700 differences 
+  </p>
     <div class="container" style="width:100%;">
       <ol id="thing">
       </ol>
