Added an about description

--- a/www/index.html
+++ b/www/index.html
@@ -14,19 +14,18 @@
 </div>
 
 <div id="container">
+	<h1>About</h1>
+	<p>campaigCON is the product of a two day <a href="https://hack-icorruption.hackpad.com/Hacking-iCorruption-March-2729-2015-5Hy9RwotYNM">hackathon to end iCorruption (Institutional Corruption)</a>.
+		This project focused on the relationship between campaign contributions and congressional candidates using <a href="http://www.fec.gov/finance/disclosure/ftpdet.shtml">FEC data</a> to explore both the short term and long term trends of money in politics. The site is currently under futher development. Please check back for updates and more features for exploring this crucial information.
+	</p>
 
-    <h1>Modified FEC Record Examples</h1>
-
-    <p><a href="http://dmil.github.io/iCorruptionHack/">2014 Revised Record</a></p>
-    
 </div>
 <div id="container">
-
+	 <h1>Modified FEC Record Example</h1>
+    <p><a href="http://dmil.github.io/iCorruptionHack/">2014 Revised Record</a></p>
     <h1>Network of Influence Examples</h1>
-
-    <p><a href="1990.html">1990 Network of contributors giving $20,000 or more to winning candidates and their recipients.</a></p>
-    <p><a href="2014.html">2014 Network of contributors giving $20,000 or more to winning candidates and their recipients.</a></p>
-    
+    <p><a href="1990.html">1990 Network of contributors giving $25,000 or more to winning candidates and their recipients.</a></p>
+    <p><a href="2014.html">2014 Network of contributors giving $25,000 or more to winning candidates and their recipients.</a></p>
 </div>
 </body>
 </html>
