New interactive network based on vis.js
Closer to what I'm looking for, need some help making it pretty.

--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,7 @@
     <h1>Network of Influence Examples</h1>
     <p><a href="1990.html">1990 Network of contributors giving $25,000 or more to winning candidates and their recipients.</a></p>
     <p><a href="2014.html">2014 Network of contributors giving $25,000 or more to winning candidates and their recipients.</a></p>
+    <p><a href="networkOfCorruption.html">Interactive network of contributors giving $25,000 or more to winning candidates and their recipients from 1990-2014.</a></p>
 </div>
 </body>
 </html>
