--- a/www/networkOfCorruption.html
+++ b/www/networkOfCorruption.html
@@ -61,6 +61,7 @@
 <span id="displayGroup">
     <span id="yearDisplay"><output for=election-cycle id="election-cycle-val" oninput="yearUpdate(value)">1990</output></span>
     <span id="election-cycle-min">1990</span> <input id="election-cycle" type="range" min="1990" max="2014" value="1990" step="2" oninput="yearUpdate(value)"> <span id="election-cycle-max">2014</span>
+    <a href="http://campaigncon.org"><img alt="campaingCON" style="border-width:0" src="img/campaignCon-logo-small.png" align="right"/></a>
 </span>
 <div id="visualization"></div>
 <div><input type="checkbox" id="allowedToMove">: Allow movement.</input></div>
