--- a/www/index.html
+++ b/www/index.html
@@ -16,8 +16,8 @@
 <div id="container">
 	<h1>About</h1>
 	<p>campaigCON is the product of a two day <a href="https://hack-icorruption.hackpad.com/Hacking-iCorruption-March-2729-2015-5Hy9RwotYNM">hackathon to end iCorruption (Institutional Corruption)</a>.
-		This project focused on the relationship between campaign contributions and congressional candidates using <a href="http://www.fec.gov/finance/disclosure/ftpdet.shtml">FEC data</a> to explore both the short term and long term trends of money in politics. The site is currently under futher development. Please check back for updates and more features for exploring this crucial information.
-	</p>
+		This project focused on the relationship between campaign contributions and congressional candidates using <a href="http://www.fec.gov/finance/disclosure/ftpdet.shtml">FEC data</a> to explore both the short term and long term trends of money in politics. You can learn more about the implications of changes to FEC records <a href="http://www.alternet.org/story/156329/revealed%3A_key_files_on_big-ticket_political_donations_vanish_at_federal_election_commission">in this story</a> that was co-authored by the Harvard Edmond J. Safra Center for Ethics fellow that inspired this project, Paul Jorgensen.</p>
+    <p>The site is currently under futher development. Please check back for updates and more features for exploring this crucial information.</p>
 
 </div>
 <div id="container">
