--- a/www/networkOfCorruption.html
+++ b/www/networkOfCorruption.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<!-- saved from url=(0044)http://kenedict.com/networks/worldcup14/vis/ , thanks Andre!-->
 <html><head><meta http-equiv="content-type" content="text/html; charset=UTF8">
     <title>campaignCON | Network of Corruption</title>
-    <script type="text/javascript" src="js/vis.js"></script>
-    <link type="text/css" rel="stylesheet" href="css/vis.css">
+    <script type="text/javascript" src="./js/vis.js"></script>
+    <link type="text/css" rel="stylesheet" href="./css/vis.css">
 
     <style type="text/css">
         body, html: {
