--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>campainCON | Start</title>
 
-    <link href='style.css' type='text/css' rel='stylesheet'>
+    <link href='css/style.css' type='text/css' rel='stylesheet'>
 </head>
 
 <body>
@@ -12,7 +12,7 @@
 <div id="container">
 
 <header>
-	<a rel="title" href="http://campaigncon.org"><img alt="campaingCON" style="border-width:0" src="campaignCon-title.png" /></a>
+	<a rel="title" href="http://campaigncon.org"><img alt="campaingCON" style="border-width:0" src="img/campaignCon-title.png" /></a>
 </header>
 
 <section class="intro">
